--- a/adeluxuryeyewear/ade/templates/ade/base_layout.html
+++ b/adeluxuryeyewear/ade/templates/ade/base_layout.html
@@ -8,15 +8,23 @@
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
         
+        
+        
         <link href="https://fonts.googleapis.com/css?family=Lato|Raleway|Pacifico" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">   
         <link rel="stylesheet" href="{% static 'css/ade.css' %}">
+        <link rel="stylesheet" href="{% static 'css/flexslider.css' %}">
+        
+        <script src="{% static "js/jquery.flexslider.js" %}" type="text/javascript"></script>
+
+
+
     </head>
 
-    <body>             
-        <!-- Sidebar Menu -->
+    <body>
+        
         <div class="ui vertical inverted sidebar menu">
             <a href="{% url 'index' %}" class="item"> Home </a>
             <div class="item">
@@ -30,19 +38,99 @@
             
             <a href="{% url 'about' %}" class="item"> About </a>
             <a class="item"> Contact </a>
-            <a class="item"> Terms & Conditions </a>
+            <a href="{% url 'terms' %}" class="item"> Terms & Conditions </a>
             <a class="item"> Refund Policy </a>
             <a class="item"> Privacy Statement </a>
         </div>
-
     
 
-        <!-- End Navigation -->
+        <div class="pusher">
+            
+            <div class="ui inverted vertical center aligned segment black-bg top-menu">
+                
+                <div class="ui large secondary inverted menu grid">
+                    <div class="row">
 
-        {% block content %}
+                        <div class="four wide column sidebar-icon">
+                            <a id="toggle" class="item"><i id="sidebar-icon" class="sidebar icon"></i></a>
+                        </div>
+
+                        <div class="eight wide column">
+                            <a class="ui centered image logo-img logo-size" href="{% url 'index' %}"><img  src="{% static 'img/ade_1.png' %}"></a>
+                        </div>
+
+                        <div class="four wide column">
+                            <div class="ui secondary menu middle aligned right floated">
+                                <a class="item mobile-hide"><i class="fas fa-user"></i></a>
+                                <a class="item"><i class="fas fa-shopping-cart"></i></a>
+                                <a class="item mobile-hide"><i class="fas fa-search"></i> </a>
+                            </div>
+                        </div>
+                    </div>
+    
+
+                </div>
         
-        {% endblock %}
+            </div>
+        
+        
+            <!-- ACTUAL PAGE CONTENT -->
+            {% block content %}
+        
+            {% endblock %}
+            
+            <div class="ui inverted vertical footer segment black-bg footer-outter">
+                <div class="ui center aligned container">
+                    <div class="ui stackable inverted grid center middle aligned">
+                        
+                        <div class="four wide column">
+                            <div class="ui large header">LET'S STAY CONNECTED</div>
+                            
+                        </div>
 
+                        <div class="ui form eight wide subscribe column">
+                            <div class="ui small header">Subscribe to our newsletter!</div>
+                            <div class="field">
+                                <div class="ui fluid action input">
+                                    <input placeholder="Email address" type="text">
+                                    <div class="ui button">Susbcribe</div>
+                                </div>
+                            </div>
+
+                        </div>
+                    
+                        <div class="four wide column">
+                            <div class="ui medium header">@adeluxury</div>
+                            <a href="http://www.instagram.com/adeluxuryeyewear"><span class="sm-icon"><i class="fab fa-instagram"></i></span></a>
+                            <span class="sm-icon"><i class="fab fa-facebook-f"></i></span>
+                            <span class="sm-icon"><i class="fab fa-twitter"></i></span>
+                        </div>
+                    
+                    </div>
+                    
+                    <div class="ui inverted section divider"></div>
+                    
+                    <div class="ui horizontal inverted small divided link list">
+                        <a class="item" href="{% url 'about' %}">About</a>
+                        <a class="item" href="#">Contact</a>
+                        <a class="item" href="{% url 'terms' %}">Terms & Conditions</a>
+                        <a class="item" href="#">Refund Policy</a>
+                        <a class="item" href="#">Privacy Statement</a>
+                    </div>
+                    
+                    <img class="ui tiny centered image payment-logo" src="{% static 'img/payment_images/payment-logo.png' %}">
+                        
+                        
+                        
+                
+
+
+
+                
+                </div>
+            </div> <!--End Footer-->
+        
+        </div>
 
 
         
@@ -54,13 +142,55 @@
                 $('.ui.sidebar').sidebar('toggle');
             });
 
-            
 
+            function filterBy(src){
+
+                window.location = src;
+            }
+
+            $(document).ready(function(){
+                
+                /* CHANGING BREADCRUMB NAMES */
+                gender = $('#gender-breadcrumb').text();
+                
+                if(gender == 'F'){
+                    $('#gender-breadcrumb').text("QUEEN'S LINE");
+                    $('#gender-breadcrumb').attr('href',"{% url 'collection__men' %}");
+                }
+                else if (gender == 'M'){
+                    $('#gender-breadcrumb').text("KINGS'S LINE");
+                    $('#gender-breadcrumb').attr('href',"{% url 'collection__women' %}");
+                }
+                else if (gender == 'U'){
+                    $('#gender-breadcrumb').text("UNISEX LINE");
+                    $('#gender-breadcrumb').attr('href',"{% url 'collection__unisex' %}");
+                }
+
+
+
+
+                $('.flexslider').flexslider({
+                    animation: "slide",
+                    controlNav: "thumbnails"
+                });
+
+            })
+            
+            /*
+            $('.thumbnail').find('.image').on('click', function(){
+                    //console.log("clicked")
+                    src = $(this).attr('src')
+                    $('#main-img').attr('src', src )
+                })*/
+
+                    
         </script>
 
         <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
         <!-- JavaScript -->
         <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+        
+
 
     </body>
 </html>
