--- a/adeluxuryeyewear/products/static/css/products_style.css
+++ b/adeluxuryeyewear/products/static/css/products_style.css
@@ -1,12 +1,3 @@
-/*.pusher {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-  }*/
-  
-  /*.pusher > .footer {
-    flex: 1;
-  }*/
 
   body .pusher .full.height {
     display: flex;
@@ -21,6 +12,14 @@
 
   .breadcrumb a{
     color: grey !important;
+  }
+
+  .ui.table{
+    border: none;
+  }
+
+  .ui.definition.table tr td.definition, .ui.definition.table tr td:first-child:not(.ignored) {
+   background: #fff; 
   }
   .item-detail h1{
     font-family: 'Raleway';
@@ -94,6 +93,28 @@
     color: grey !important;
   }
   
+
+  .demo {
+    width:420px;
+}
+ul {
+    list-style: none outside none;
+    padding-left: 0;
+    margin-bottom:0;
+}
+li {
+    display: block;
+    float: left;
+    margin-right: 6px;
+    cursor:pointer;
+}
+img {
+    display: block;
+    height: auto;
+    max-width: 100%;
+}
+
+
 /* MOBILE STYLES */
   @media only screen and (max-width: 768px) {
     /* For mobile phones: */
