added basic user authentication, still need nice front end

--- a/adeluxuryeyewear/ade/templates/ade/base_layout.html
+++ b/adeluxuryeyewear/ade/templates/ade/base_layout.html
@@ -61,7 +61,7 @@
 
                         <div class="four wide column">
                             <div class="ui secondary menu middle aligned right floated">
-                                <a class="item mobile-hide"><i class="fas fa-user"></i></a>
+                                <a href={% url 'login' %} class="item mobile-hide"><i class="fas fa-user"></i></a>
                                 <a class="item"><i class="fas fa-shopping-cart"></i></a>
                                 <a class="item mobile-hide"><i class="fas fa-search"></i> </a>
                             </div>
