user authentication - added urls & messages

--- a/adeluxuryeyewear/templates/registration/logged_out.html
+++ b/adeluxuryeyewear/templates/registration/logged_out.html
@@ -1,6 +1,7 @@
 {% extends "ade/base_layout.html" %}
 
 {% block content %}
-  <p>Logged out!</p>  
-  <a href="{% url 'login'%}">Click here to login again.</a>
+  <p>Thank you!</p>
+  <p><a href="{% url 'index' %}">Continue shopping</a></p>  
+  <a href="{% url 'login'%}">Sign back in.</a>
 {% endblock %}
