--- a/adeluxuryeyewear/ade/templates/ade/base_layout.html
+++ b/adeluxuryeyewear/ade/templates/ade/base_layout.html
@@ -61,9 +61,13 @@
 
                         <div class="four wide column">
                             <div class="ui secondary menu middle aligned right floated">
-                                <a href={% url 'login' %} class="item mobile-hide"><i class="fas fa-user"></i></a>
-                                <a class="item"><i class="fas fa-shopping-cart"></i></a>
-                                <a class="item mobile-hide"><i class="fas fa-search"></i> </a>
+                                {% if user.is_authenticated %}
+                                    <a href={% url 'logout' %} class="item mobile-hide">Sign out<i class="fas fa-sign-out-alt"></i></a>
+                                {% else %}
+                                    <a href={% url 'login' %} class="item mobile-hide">Sign in<i class="fas fa-user"></i></a>
+                                {% endif %}
+                                    <a class="item"><i class="fas fa-shopping-cart"></i></a>
+                                    <a class="item mobile-hide"><i class="fas fa-search"></i> </a>
                             </div>
                         </div>
                     </div>
